--- a/JavaCode/pom.xml
+++ b/JavaCode/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.changlehung</groupId>
     <artifactId>CSCoreCode</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
