--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-writingsuggestions.md
-reco.md
-.ipynb_checkpoints
-life
-.idea
-**/.vscode
-*.out
-**/target
-.DS*
+*~
+_book
+.git .gitignore .gitmodules
